--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "typescript": "^4.9.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.15",
+    "ts-node-dev": "^2.0.0"
+  },
   "scripts": {
     "start": "tsc && node ./build/index.js",
+    "dev": "ts-node-dev src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
