--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "typescript": "^4.9.4"
   },
   "scripts": {
+    "start": "tsc && node ./build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -124,7 +125,7 @@
     "url": "git+https://github.com/jessicayve/labecommerce-backend.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Jessica Yve",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/jessicayve/labecommerce-backend/issues"
