--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@types/node": "^18.11.18",
     "accepts": "^1.3.8",
     "acorn": "^8.8.1",
     "acorn-walk": "^8.2.0",
@@ -57,6 +58,7 @@
     "is-extglob": "^2.1.1",
     "is-glob": "^4.0.3",
     "is-number": "^7.0.0",
+    "knex": "^2.4.2",
     "make-error": "^1.3.6",
     "media-typer": "^0.3.0",
     "merge-descriptors": "^1.0.1",
@@ -94,6 +96,7 @@
     "side-channel": "^1.0.4",
     "source-map": "^0.6.1",
     "source-map-support": "^0.5.21",
+    "sqlite3": "^5.1.4",
     "statuses": "^2.0.1",
     "strip-bom": "^3.0.0",
     "strip-json-comments": "^2.0.1",
@@ -102,7 +105,6 @@
     "toidentifier": "^1.0.1",
     "tree-kill": "^1.2.2",
     "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0",
     "tsconfig": "^7.0.0",
     "type-is": "^1.6.18",
     "unpipe": "^1.0.0",
@@ -114,11 +116,15 @@
     "yn": "^3.1.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.15",
+    "@types/knex": "^0.16.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
   },
   "scripts": {
     "start": "tsc && node ./build/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node-dev ./src/index.ts"
   },
   "repository": {
     "type": "git",
